--- a/190/index.html
+++ b/190/index.html
@@ -21,7 +21,7 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#org2ce9800">1. 任务</a></li>
-<li><a href="#orgd3da505">2. 课堂笔记</a>
+<li><a href="#org11bdf19">2. 笔记</a>
 <ul>
 <li><a href="#orge9bf96d">2.1. 2024-03-11 08:30:00</a></li>
 <li><a href="#org4c6717e">2.2. 2024-01-15 (寒假作业)</a></li>
@@ -469,8 +469,8 @@
 </div>
 </section>
 
-<section id="outline-container-orgd3da505" class="outline-2">
-<h2 id="orgd3da505"><span class="section-number-2">2.</span> 课堂笔记</h2>
+<section id="outline-container-org11bdf19" class="outline-2">
+<h2 id="org11bdf19"><span class="section-number-2">2.</span> 笔记</h2>
 <div class="outline-text-2" id="text-2">
 </div>
 <div id="outline-container-orge9bf96d" class="outline-3">
