best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -526,7 +526,7 @@ Winform 项目，VS 界面:
 </p>
 <ul class="org-ul">
 <li>复习本节所讲，多多练习</li>
-<li>在界面上讲身体状况的信息合理展示出来</li>
+<li>在界面上将身体状况的信息合理展示出来</li>
 </ul>
 </div>
 </div>
