best_try_and_best_chance

--- a/190/index.html
+++ b/190/index.html
@@ -527,6 +527,7 @@ Winform 项目，VS 界面:
 <ul class="org-ul">
 <li>复习本节所讲，多多练习</li>
 <li>在界面上将身体状况的信息合理展示出来</li>
+<li>注意纪律。有问题主动提问</li>
 </ul>
 </div>
 </div>
