--- a/190/index.html
+++ b/190/index.html
@@ -25,6 +25,7 @@
 <li><a href="#orge9bf96d">1.1. 2024-03-11 08:30:00</a></li>
 <li><a href="#org4c6717e">1.2. 2024-01-15 (寒假作业)</a></li>
 <li><a href="#orgad3d36e">1.3. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#orgfd4e351">1.4. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org2ce9800">2. 任务</a></li>
@@ -601,6 +602,15 @@ Winform 项目，VS 界面:
 </table>
 </div>
 </div>
+
+<div id="outline-container-orgfd4e351" class="outline-3">
+<h3 id="orgfd4e351"><span class="section-number-3">1.4.</span> 2023-09-07 (任务)</h3>
+<div class="outline-text-3" id="text-1-4">
+<p>
+01-张三.txt, 创建源文件、编写代码、编译、运行
+</p>
+</div>
+</div>
 </section>
 
 <section id="outline-container-org2ce9800" class="outline-2">
@@ -624,7 +634,7 @@ Winform 项目，VS 界面:
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right">2023-09-07</th>
+<th scope="col" class="org-right"><a href="#orgfd4e351">2023-09-07</a></th>
 <th scope="col" class="org-right">2023-10-30</th>
 <th scope="col" class="org-right">2023-12-28</th>
 </tr>
