--- a/190/index.html
+++ b/190/index.html
@@ -25,10 +25,12 @@
 <li><a href="#orge9bf96d">1.1. 2024-03-11 08:30:00</a></li>
 <li><a href="#org4c6717e">1.2. 2024-01-15 (寒假作业)</a></li>
 <li><a href="#orgad3d36e">1.3. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#orgfd4e351">1.4. 2023-09-07 (任务)</a></li>
+<li><a href="#orgb7c8328">1.4. 2023-12-28 (任务)</a></li>
+<li><a href="#orgcd1e25e">1.5. 2023-10-30 (任务)</a></li>
+<li><a href="#orgfd4e351">1.6. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org2ce9800">2. 任务</a></li>
+<li><a href="#org6520896">2. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -603,9 +605,31 @@ Winform 项目，VS 界面:
 </div>
 </div>
 
-<div id="outline-container-orgfd4e351" class="outline-3">
-<h3 id="orgfd4e351"><span class="section-number-3">1.4.</span> 2023-09-07 (任务)</h3>
+<div id="outline-container-orgb7c8328" class="outline-3">
+<h3 id="orgb7c8328"><span class="section-number-3">1.4.</span> 2023-12-28 (任务)</h3>
 <div class="outline-text-3" id="text-1-4">
+<p>
+使用控制台实现点名的功能。
+</p>
+
+<p>
+[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgcd1e25e" class="outline-3">
+<h3 id="orgcd1e25e"><span class="section-number-3">1.5.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-5">
+<p>
+创建类 Device，描述设备的基本信息并添加基本控制
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgfd4e351" class="outline-3">
+<h3 id="orgfd4e351"><span class="section-number-3">1.6.</span> 2023-09-07 (任务)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
 </p>
@@ -613,8 +637,8 @@ Winform 项目，VS 界面:
 </div>
 </section>
 
-<section id="outline-container-org2ce9800" class="outline-2">
-<h2 id="org2ce9800"><span class="section-number-2">2.</span> 任务</h2>
+<section id="outline-container-org6520896" class="outline-2">
+<h2 id="org6520896"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
 <table id="orgb5a520c">
 
@@ -635,8 +659,8 @@ Winform 项目，VS 界面:
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
 <th scope="col" class="org-right"><a href="#orgfd4e351">2023-09-07</a></th>
-<th scope="col" class="org-right">2023-10-30</th>
-<th scope="col" class="org-right">2023-12-28</th>
+<th scope="col" class="org-right"><a href="#orgcd1e25e">2023-10-30</a></th>
+<th scope="col" class="org-right"><a href="#orgb7c8328">2023-12-28</a></th>
 </tr>
 </thead>
 <tbody>
@@ -1033,16 +1057,6 @@ Winform 项目，VS 界面:
 </tr>
 </tbody>
 </table>
-
-
-<p>
-任务备注:
-</p>
-<ul class="org-ul">
-<li>2023-09-07, 01-张三.txt, 创建源文件、编写代码、编译、运行</li>
-<li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
-<li>2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]</li>
-</ul>
 </div>
 </section>
 </div>
