--- a/191/index.html
+++ b/191/index.html
@@ -30,20 +30,20 @@
 <li><a href="#org97d04e9">1.6. 2023-09-11 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org6b73c18">2. 练习题</a>
+<li><a href="#org5193a51">2. 测验结果</a></li>
+<li><a href="#org6b73c18">3. 练习题</a>
 <ul>
-<li><a href="#org001c09e">2.1. 循环和条件判断</a>
+<li><a href="#org001c09e">3.1. 循环和条件判断</a>
 <ul>
-<li><a href="#org432ea3a">2.1.1. 打印从 1 到 1000 的所有数</a></li>
-<li><a href="#orgc41944b">2.1.2. 求取从 1 到 1000 的所有数的和</a></li>
-<li><a href="#orgb27b2e3">2.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
-<li><a href="#org83a9938">2.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-<li><a href="#orgadbd614">2.1.5. 在控制台上，输出 99 乘法表</a></li>
+<li><a href="#org432ea3a">3.1.1. 打印从 1 到 1000 的所有数</a></li>
+<li><a href="#orgc41944b">3.1.2. 求取从 1 到 1000 的所有数的和</a></li>
+<li><a href="#orgb27b2e3">3.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
+<li><a href="#org83a9938">3.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
+<li><a href="#orgadbd614">3.1.5. 在控制台上，输出 99 乘法表</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org5193a51">3. 测验结果</a></li>
 </ul>
 </div>
 </nav>
@@ -85,7 +85,7 @@
 </p>
 
 
-<figure id="orgb861c75">
+<figure id="org4502c2b">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -381,108 +381,9 @@
 </div>
 </section>
 
-<section id="outline-container-org6b73c18" class="outline-2">
-<h2 id="org6b73c18"><span class="section-number-2">2.</span> 练习题</h2>
-<div class="outline-text-2" id="text-2">
-</div>
-<div id="outline-container-org001c09e" class="outline-3">
-<h3 id="org001c09e"><span class="section-number-3">2.1.</span> 循环和条件判断</h3>
-<div class="outline-text-3" id="text-2-1">
-</div>
-<div id="outline-container-org432ea3a" class="outline-4">
-<h4 id="org432ea3a"><span class="section-number-4">2.1.1.</span> 打印从 1 到 1000 的所有数</h4>
-<div class="outline-text-4" id="text-2-1-1">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
-<span class="linenr">2: </span><span style="color: #000000;">{</span>
-<span class="linenr">3: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">(</span>i<span style="color: #a8007f;">)</span>;
-<span class="linenr">4: </span><span style="color: #000000;">}</span>
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-orgc41944b" class="outline-4">
-<h4 id="orgc41944b"><span class="section-number-4">2.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
-<div class="outline-text-4" id="text-2-1-2">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
-<span class="linenr">2: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
-<span class="linenr">3: </span><span style="color: #000000;">{</span>
-<span class="linenr">4: </span>    sum = sum + i;
-<span class="linenr">5: </span><span style="color: #000000;">}</span>
-<span class="linenr">6: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}"</span><span style="color: #000000;">)</span>;
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-orgb27b2e3" class="outline-4">
-<h4 id="orgb27b2e3"><span class="section-number-4">2.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
-<div class="outline-text-4" id="text-2-1-3">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
-<span class="linenr"> 2: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = 1000;
-<span class="linenr"> 3: </span>
-<span class="linenr"> 4: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
-<span class="linenr"> 5: </span><span style="color: #000000;">{</span>
-<span class="linenr"> 6: </span>    sum = sum + i;
-<span class="linenr"> 7: </span><span style="color: #000000;">}</span>
-<span class="linenr"> 8: </span>
-<span class="linenr"> 9: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = sum / <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span>n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
-<span class="linenr">10: </span>
-<span class="linenr">11: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-org83a9938" class="outline-4">
-<h4 id="org83a9938"><span class="section-number-4">2.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
-<div class="outline-text-4" id="text-2-1-4">
-<details><summary>参考答案</summary>
-
-<div class="org-src-container">
-<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">numbers</span> = <span style="color: #000000;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #000000;">}</span>;
-<span class="linenr"> 2: </span>
-<span class="linenr"> 3: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
-<span class="linenr"> 4: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = numbers.Length;
-<span class="linenr"> 5: </span>
-<span class="linenr"> 6: </span><span style="color: #5317ac;">foreach</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> <span style="color: #5317ac;">in</span> numbers<span style="color: #000000;">)</span>
-<span class="linenr"> 7: </span><span style="color: #000000;">{</span>
-<span class="linenr"> 8: </span>    sum = sum + i;
-<span class="linenr"> 9: </span><span style="color: #000000;">}</span>
-<span class="linenr">10: </span>
-<span class="linenr">11: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span> sum / n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
-<span class="linenr">12: </span>
-<span class="linenr">13: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
-</pre>
-</div>
-
-</details>
-</div>
-</div>
-
-<div id="outline-container-orgadbd614" class="outline-4">
-<h4 id="orgadbd614"><span class="section-number-4">2.1.5.</span> 在控制台上，输出 99 乘法表</h4>
-</div>
-</div>
-</section>
 <section id="outline-container-org5193a51" class="outline-2">
-<h2 id="org5193a51"><span class="section-number-2">3.</span> 测验结果</h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="org5193a51"><span class="section-number-2">2.</span> 测验结果</h2>
+<div class="outline-text-2" id="text-2">
 <table id="org21eae3b">
 
 
@@ -700,6 +601,106 @@
 </tr>
 </tbody>
 </table>
+</div>
+</section>
+
+<section id="outline-container-org6b73c18" class="outline-2">
+<h2 id="org6b73c18"><span class="section-number-2">3.</span> 练习题</h2>
+<div class="outline-text-2" id="text-3">
+</div>
+<div id="outline-container-org001c09e" class="outline-3">
+<h3 id="org001c09e"><span class="section-number-3">3.1.</span> 循环和条件判断</h3>
+<div class="outline-text-3" id="text-3-1">
+</div>
+<div id="outline-container-org432ea3a" class="outline-4">
+<h4 id="org432ea3a"><span class="section-number-4">3.1.1.</span> 打印从 1 到 1000 的所有数</h4>
+<div class="outline-text-4" id="text-3-1-1">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
+<span class="linenr">2: </span><span style="color: #000000;">{</span>
+<span class="linenr">3: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">(</span>i<span style="color: #a8007f;">)</span>;
+<span class="linenr">4: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-orgc41944b" class="outline-4">
+<h4 id="orgc41944b"><span class="section-number-4">3.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
+<div class="outline-text-4" id="text-3-1-2">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
+<span class="linenr">2: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
+<span class="linenr">3: </span><span style="color: #000000;">{</span>
+<span class="linenr">4: </span>    sum = sum + i;
+<span class="linenr">5: </span><span style="color: #000000;">}</span>
+<span class="linenr">6: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}"</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-orgb27b2e3" class="outline-4">
+<h4 id="orgb27b2e3"><span class="section-number-4">3.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
+<div class="outline-text-4" id="text-3-1-3">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
+<span class="linenr"> 2: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = 1000;
+<span class="linenr"> 3: </span>
+<span class="linenr"> 4: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
+<span class="linenr"> 5: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 6: </span>    sum = sum + i;
+<span class="linenr"> 7: </span><span style="color: #000000;">}</span>
+<span class="linenr"> 8: </span>
+<span class="linenr"> 9: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = sum / <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span>n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
+<span class="linenr">10: </span>
+<span class="linenr">11: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-org83a9938" class="outline-4">
+<h4 id="org83a9938"><span class="section-number-4">3.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
+<div class="outline-text-4" id="text-3-1-4">
+<details><summary>参考答案</summary>
+
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">numbers</span> = <span style="color: #000000;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #000000;">}</span>;
+<span class="linenr"> 2: </span>
+<span class="linenr"> 3: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
+<span class="linenr"> 4: </span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">n</span> = numbers.Length;
+<span class="linenr"> 5: </span>
+<span class="linenr"> 6: </span><span style="color: #5317ac;">foreach</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> <span style="color: #5317ac;">in</span> numbers<span style="color: #000000;">)</span>
+<span class="linenr"> 7: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 8: </span>    sum = sum + i;
+<span class="linenr"> 9: </span><span style="color: #000000;">}</span>
+<span class="linenr">10: </span>
+<span class="linenr">11: </span><span style="color: #005a5f;">double</span> <span style="color: #00538b;">avg</span> = <span style="color: #000000;">(</span><span style="color: #005a5f;">double</span><span style="color: #000000;">)</span> sum / n; <span style="color: #505050;">// </span><span style="color: #505050;">&#24179;&#22343;&#25968; = &#21644; &#247; &#20010;&#25968;</span>
+<span class="linenr">12: </span>
+<span class="linenr">13: </span>Console.<span style="color: #721045;">WriteLine</span><span style="color: #000000;">(</span>$<span style="color: #2544bb;">"&#20182;&#20204;&#30340;&#21644;&#26159; {sum}, &#24179;&#22343;&#25968;&#26159; {avg}"</span><span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+</details>
+</div>
+</div>
+
+<div id="outline-container-orgadbd614" class="outline-4">
+<h4 id="orgadbd614"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
+</div>
 </div>
 </section>
 </div>
