best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -30,7 +30,7 @@
 <li><a href="#org97d04e9">1.6. 2023-09-11 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org5193a51">2. 测验结果</a></li>
+<li><a href="#org025282c">2. 任务结果</a></li>
 <li><a href="#org6b73c18">3. 练习题</a>
 <ul>
 <li><a href="#org001c09e">3.1. 循环和条件判断</a>
@@ -85,7 +85,7 @@
 </p>
 
 
-<figure id="org4502c2b">
+<figure id="org04fbc9e">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -381,8 +381,8 @@
 </div>
 </section>
 
-<section id="outline-container-org5193a51" class="outline-2">
-<h2 id="org5193a51"><span class="section-number-2">2.</span> 测验结果</h2>
+<section id="outline-container-org025282c" class="outline-2">
+<h2 id="org025282c"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
 <table id="org21eae3b">
 
