--- a/192/index.html
+++ b/192/index.html
@@ -29,7 +29,7 @@
 <li><a href="#org16fdc68">1.5. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#orgd5c22aa">2. 测验结果</a></li>
+<li><a href="#org366482f">2. 任务结果</a></li>
 <li><a href="#org47c88af">3. 知识点</a>
 <ul>
 <li><a href="#org2d01e22">3.1. 将 string 转换为 double 有哪些方式?</a></li>
@@ -516,8 +516,8 @@ C/S架构编程，做完第一章所有的上机题:
 </section>
 
 
-<section id="outline-container-orgd5c22aa" class="outline-2">
-<h2 id="orgd5c22aa"><span class="section-number-2">2.</span> 测验结果</h2>
+<section id="outline-container-org366482f" class="outline-2">
+<h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
 <table id="org53e5988">
 
