--- a/191/index.html
+++ b/191/index.html
@@ -39,7 +39,8 @@
 <li><a href="#org26699e9">3.1.2. 求取从 1 到 1000 的所有数的和</a></li>
 <li><a href="#org55cf224">3.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
 <li><a href="#orgc8b5722">3.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-<li><a href="#org5217738">3.1.5. 在控制台上，输出 99 乘法表</a></li>
+<li><a href="#org2348423">3.1.5. 在控制台上，输出倒三角</a></li>
+<li><a href="#org5217738">3.1.6. 在控制台上，输出 99 乘法表</a></li>
 </ul>
 </li>
 </ul>
@@ -85,7 +86,7 @@
 </p>
 
 
-<figure id="orgf0683e2">
+<figure id="org9962f97">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -698,9 +699,48 @@
 </div>
 </div>
 
-<div id="outline-container-org5217738" class="outline-4">
-<h4 id="org5217738"><span class="section-number-4">3.1.5.</span> 在控制台上，输出 99 乘法表</h4>
+<div id="outline-container-org2348423" class="outline-4">
+<h4 id="org2348423"><span class="section-number-4">3.1.5.</span> 在控制台上，输出倒三角</h4>
 <div class="outline-text-4" id="text-3-1-5">
+<pre class="example">
+*****
+****
+***
+**
+*
+</pre>
+
+
+<p>
+实现思路:
+</p>
+<ul class="org-ul">
+<li>先写一个简单的循环，输出 N 行，每行一个 *</li>
+<li>尝试修改上述代码，输出 N 行，每行输出 M 个星</li>
+<li>再修改上述代码，让次循环中输出的星的个数跟当前行数关联</li>
+</ul>
+
+<p>
+{{{details{参考答案}}}}
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 0; i &lt; 9; i++<span style="color: #000000;">)</span>
+<span class="linenr">2: </span><span style="color: #000000;">{</span>
+<span class="linenr">3: </span>    <span style="color: #5317ac;">for</span> <span style="color: #a8007f;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">j</span> = 0; j &lt; 9 - i; j++<span style="color: #a8007f;">)</span>
+<span class="linenr">4: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">5: </span>        Console.<span style="color: #721045;">Write</span><span style="color: #005f88;">(</span><span style="color: #2544bb;">"*"</span><span style="color: #005f88;">)</span>;
+<span class="linenr">6: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">7: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">8: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</details>
+</div>
+</div>
+
+<div id="outline-container-org5217738" class="outline-4">
+<h4 id="org5217738"><span class="section-number-4">3.1.6.</span> 在控制台上，输出 99 乘法表</h4>
+<div class="outline-text-4" id="text-3-1-6">
 <pre class="example">
 1x1=1
 1x2=2 2x2=4
