best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -39,7 +39,7 @@
 <li><a href="#org26699e9">3.1.2. 求取从 1 到 1000 的所有数的和</a></li>
 <li><a href="#org55cf224">3.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
 <li><a href="#orgc8b5722">3.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-<li><a href="#org2348423">3.1.5. 在控制台上，输出倒三角</a></li>
+<li><a href="#orgd4845c3">3.1.5. 在控制台上，输出倒三角图案</a></li>
 <li><a href="#org5217738">3.1.6. 在控制台上，输出 99 乘法表</a></li>
 </ul>
 </li>
@@ -86,7 +86,7 @@
 </p>
 
 
-<figure id="org9962f97">
+<figure id="orga93b271">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -699,8 +699,8 @@
 </div>
 </div>
 
-<div id="outline-container-org2348423" class="outline-4">
-<h4 id="org2348423"><span class="section-number-4">3.1.5.</span> 在控制台上，输出倒三角</h4>
+<div id="outline-container-orgd4845c3" class="outline-4">
+<h4 id="orgd4845c3"><span class="section-number-4">3.1.5.</span> 在控制台上，输出倒三角图案</h4>
 <div class="outline-text-4" id="text-3-1-5">
 <pre class="example">
 *****
