best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -86,7 +86,7 @@
 </p>
 
 
-<figure id="orga93b271">
+<figure id="orga83a2f6">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -720,9 +720,7 @@
 <li>再修改上述代码，让次循环中输出的星的个数跟当前行数关联</li>
 </ul>
 
-<p>
-{{{details{参考答案}}}}
-</p>
+<details><summary>参考答案</summary>
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 0; i &lt; 9; i++<span style="color: #000000;">)</span>
 <span class="linenr">2: </span><span style="color: #000000;">{</span>
