best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -22,12 +22,13 @@
 <ul>
 <li><a href="#org6f420db">1. 笔记</a>
 <ul>
-<li><a href="#org55e7c0e">1.1. 2024-03-08 08:40:26</a></li>
-<li><a href="#org1e73e0a">1.2. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#orgb4d145b">1.3. 2024-01-15 (期末分数)</a></li>
-<li><a href="#org74d06bc">1.4. 2023-12-25 (任务)</a></li>
-<li><a href="#orga9f8e56">1.5. 2023-10-30 (任务)</a></li>
-<li><a href="#org857fc3a">1.6. 2023-09-11 (任务)</a></li>
+<li><a href="#orga76909f">1.1. 2024-03-12 09:46:16</a></li>
+<li><a href="#org55e7c0e">1.2. 2024-03-08 08:40:26</a></li>
+<li><a href="#org1e73e0a">1.3. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#orgb4d145b">1.4. 2024-01-15 (期末分数)</a></li>
+<li><a href="#org74d06bc">1.5. 2023-12-25 (任务)</a></li>
+<li><a href="#orga9f8e56">1.6. 2023-10-30 (任务)</a></li>
+<li><a href="#org857fc3a">1.7. 2023-09-11 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org8785210">2. 任务结果</a></li>
@@ -57,9 +58,22 @@
 <h2 id="org6f420db"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org55e7c0e" class="outline-3">
-<h3 id="org55e7c0e"><span class="section-number-3">1.1.</span> 2024-03-08 08:40:26</h3>
+<div id="outline-container-orga76909f" class="outline-3">
+<h3 id="orga76909f"><span class="section-number-3">1.1.</span> 2024-03-12 09:46:16</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+99乘法表，实际上跟倒三角的题目是一样的:
+</p>
+<ul class="org-ul">
+<li>它是一个正向的三角排列</li>
+<li>它只不过将每个输出的 * 具体成了一个字符串</li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org55e7c0e" class="outline-3">
+<h3 id="org55e7c0e"><span class="section-number-3">1.2.</span> 2024-03-08 08:40:26</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 要干啥:
 </p>
@@ -79,14 +93,14 @@
 </div>
 
 <div id="outline-container-org1e73e0a" class="outline-3">
-<h3 id="org1e73e0a"><span class="section-number-3">1.2.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org1e73e0a"><span class="section-number-3">1.3.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 完成下面图示的题目:
 </p>
 
 
-<figure id="orga83a2f6">
+<figure id="org3455baa">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -102,8 +116,8 @@
 </div>
 
 <div id="outline-container-orgb4d145b" class="outline-3">
-<h3 id="orgb4d145b"><span class="section-number-3">1.3.</span> 2024-01-15 (期末分数)</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="orgb4d145b"><span class="section-number-3">1.4.</span> 2024-01-15 (期末分数)</h3>
+<div class="outline-text-3" id="text-1-4">
 <table>
 
 
@@ -355,8 +369,8 @@
 
 
 <div id="outline-container-org74d06bc" class="outline-3">
-<h3 id="org74d06bc"><span class="section-number-3">1.4.</span> 2023-12-25 (任务)</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org74d06bc"><span class="section-number-3">1.5.</span> 2023-12-25 (任务)</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 </p>
@@ -364,8 +378,8 @@
 </div>
 
 <div id="outline-container-orga9f8e56" class="outline-3">
-<h3 id="orga9f8e56"><span class="section-number-3">1.5.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="orga9f8e56"><span class="section-number-3">1.6.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
@@ -373,8 +387,8 @@
 </div>
 
 <div id="outline-container-org857fc3a" class="outline-3">
-<h3 id="org857fc3a"><span class="section-number-3">1.6.</span> 2023-09-11 (任务)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org857fc3a"><span class="section-number-3">1.7.</span> 2023-09-11 (任务)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 创建 helloworld、编译、运行，独立完成
 </p>
