best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -100,7 +100,7 @@
 </p>
 
 
-<figure id="org7e94e90">
+<figure id="orgf82535f">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -771,15 +771,15 @@
 
 <details><summary>参考答案</summary>
 <div class="org-src-container">
-<pre class="src src-csx"><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 9; i++<span style="color: #000000;">)</span>
-<span style="color: #000000;">{</span>
-    <span style="color: #5317ac;">for</span> <span style="color: #a8007f;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">j</span> = 1; j &lt;= i; j++<span style="color: #a8007f;">)</span>
-    <span style="color: #a8007f;">{</span>
-        <span style="color: #505050;">//</span><span style="color: #505050;">string r = $"{j}x{i}={j * i}\t";</span>
-        Console.<span style="color: #721045;">Write</span><span style="color: #005f88;">(</span>$<span style="color: #2544bb;">"{j}x{i}={j * i}\t"</span><span style="color: #005f88;">)</span>;
-    <span style="color: #a8007f;">}</span>
-    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">()</span>;
-<span style="color: #000000;">}</span>
+<pre class="src src-csx"><span class="linenr">1: </span><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 9; i++<span style="color: #000000;">)</span>
+<span class="linenr">2: </span><span style="color: #000000;">{</span>
+<span class="linenr">3: </span>    <span style="color: #5317ac;">for</span> <span style="color: #a8007f;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">j</span> = 1; j &lt;= i; j++<span style="color: #a8007f;">)</span>
+<span class="linenr">4: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">5: </span>        <span style="color: #505050;">//</span><span style="color: #505050;">string r = $"{j}x{i}={j * i}\t";</span>
+<span class="linenr">6: </span>        Console.<span style="color: #721045;">Write</span><span style="color: #005f88;">(</span>$<span style="color: #2544bb;">"{j}x{i}={j * i}\t"</span><span style="color: #005f88;">)</span>;
+<span class="linenr">7: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">8: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">9: </span><span style="color: #000000;">}</span>
 </pre>
 </div>
 </details>
