--- a/192/index.html
+++ b/192/index.html
@@ -22,11 +22,12 @@
 <ul>
 <li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#orgbb73b3f">1.1. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.2. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.3. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.4. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.5. 2023-09-06 (任务)</a></li>
+<li><a href="#orgd40edb2">1.1. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgbb73b3f">1.2. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.3. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.4. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.5. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.6. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org7ac10f0">2. 练习题</a>
@@ -53,9 +54,26 @@
 <h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.1.</span> 2024-01-16 (寒假作业)</h3>
+<div id="outline-container-orgd40edb2" class="outline-3">
+<h3 id="orgd40edb2"><span class="section-number-3">1.1.</span> 2024-03-12 11:07:40</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
+</p>
+<pre class="example">
+string abc = Console.ReadLine();
+</pre>
+
+
+<p>
+字符串 (string) 和字符 (char) 是不一样的!!!
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgbb73b3f" class="outline-3">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.2.</span> 2024-01-16 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -67,8 +85,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.2.</span> 2024-01-16 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="orgdd2b753"><span class="section-number-3">1.3.</span> 2024-01-16 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-3">
 <table>
 
 
@@ -488,8 +506,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.3.</span> 2023-12-26 (任务)</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="orgad105e2"><span class="section-number-3">1.4.</span> 2023-12-26 (任务)</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 </p>
@@ -497,8 +515,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.4.</span> 2023-10-31 (任务)</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org64a4c8c"><span class="section-number-3">1.5.</span> 2023-10-31 (任务)</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
 </p>
@@ -506,8 +524,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.5.</span> 2023-09-06 (任务)</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org16fdc68"><span class="section-number-3">1.6.</span> 2023-09-06 (任务)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 </p>
