best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-12 -->
+<!-- 2024-03-13 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -22,12 +22,13 @@
 <ul>
 <li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#orgd40edb2">1.1. 2024-03-12 11:07:40</a></li>
-<li><a href="#orgbb73b3f">1.2. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.3. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.4. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.5. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.6. 2023-09-06 (任务)</a></li>
+<li><a href="#org2309290">1.1. 2024-03-13 08:31:23</a></li>
+<li><a href="#orgd40edb2">1.2. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgbb73b3f">1.3. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.4. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.5. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.6. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.7. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org7ac10f0">2. 练习题</a>
@@ -54,9 +55,108 @@
 <h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgd40edb2" class="outline-3">
-<h3 id="orgd40edb2"><span class="section-number-3">1.1.</span> 2024-03-12 11:07:40</h3>
+<div id="outline-container-org2309290" class="outline-3">
+<h3 id="org2309290"><span class="section-number-3">1.1.</span> 2024-03-13 08:31:23</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+上课了
+</p>
+
+<p>
+控制台应用程序 (CLI)
+</p>
+<ul class="org-ul">
+<li>Console.XXX</li>
+</ul>
+
+<p>
+GUI 程序 (Graphic User Interface):
+</p>
+<ul class="org-ul">
+<li>有用户界面的程序</li>
+<li>Winform/WPF/MAUI</li>
+</ul>
+
+<p>
+创建 Windows 窗体项目之后:
+</p>
+<ul class="org-ul">
+<li>中间是界面设计器</li>
+<li>左边是工具箱</li>
+<li>右上角是项目管理器</li>
+<li>右下角是属性管理器</li>
+</ul>
+
+<p>
+如果你的 VS 不是上述布局:
+</p>
+<ol class="org-ol">
+<li>通过菜单上的【视图】找回相应的功能</li>
+<li>通过菜单上的【窗口-重置窗口布局】的方式，恢复默认布局</li>
+</ol>
+
+<p>
+基本步骤:
+</p>
+<ol class="org-ol">
+<li>拿出纸笔，设计程序界面</li>
+<li>创建项目</li>
+<li>拖拽控件</li>
+<li>修改属性</li>
+<li>完善交互逻辑</li>
+</ol>
+
+<p>
+从工具箱每一个拖进来的东西，都叫做一个 <b>控件</b>:
+</p>
+<ul class="org-ul">
+<li>实质上，一个控件就是一个 C# 类型的实例</li>
+<li>通过界面设计器，进行拖拽，实质上是 VS 帮助我们自动生成了一坨坨的代码</li>
+<li>每一个控件都有一个[Name]的属性，这个是控件的唯一引用ID。
+要养成一个好的习惯，就是将常用的控件，改一个合适的名字</li>
+<li>MessageBox.Show 对应的是控制台项目中的 Console.Write</li>
+</ul>
+
+<details><summary>求取BMI，代码片段，仅供参考</summary>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">button1_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">sg</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #a8007f;">(</span>sgBox.Text<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 4: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">tz</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #a8007f;">(</span>tzBox.Text<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 5: </span>    <span style="color: #005a5f;">double</span> <span style="color: #00538b;">bmi</span> = tz / sg / sg;
+<span class="linenr"> 6: </span>
+<span class="linenr"> 7: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">stzk</span> = <span style="color: #0000c0;">null</span>;
+<span class="linenr"> 8: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>bmi &lt; 18.5<span style="color: #a8007f;">)</span>
+<span class="linenr"> 9: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">10: </span>        stzk = <span style="color: #2544bb;">"&#36807;&#36731;"</span>;
+<span class="linenr">11: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">12: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>bmi &lt; 24<span style="color: #a8007f;">)</span>
+<span class="linenr">13: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">14: </span>        stzk = <span style="color: #2544bb;">"&#27491;&#24120;"</span>;
+<span class="linenr">15: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">16: </span>    <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>bmi &lt; 28<span style="color: #a8007f;">)</span>
+<span class="linenr">17: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">18: </span>        stzk = <span style="color: #2544bb;">"&#36229;&#37325;"</span>;
+<span class="linenr">19: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">20: </span>    <span style="color: #5317ac;">else</span>
+<span class="linenr">21: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">22: </span>        stzk = <span style="color: #2544bb;">"&#32933;&#32982;"</span>;
+<span class="linenr">23: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">24: </span>
+<span class="linenr">25: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">jg</span> = $<span style="color: #2544bb;">"&#24744;&#30340;BMI&#20026;{bmi}, &#36523;&#20307;&#29366;&#20917;&#20026;[{stzk}]"</span>;
+<span class="linenr">26: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">Console.WriteLine(jg);</span>
+<span class="linenr">27: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">MessageBox.Show(jg);</span>
+<span class="linenr">28: </span>    jgLabel.Text = jg;
+<span class="linenr">29: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</details>
+</div>
+</div>
+
+<div id="outline-container-orgd40edb2" class="outline-3">
+<h3 id="orgd40edb2"><span class="section-number-3">1.2.</span> 2024-03-12 11:07:40</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
 </p>
@@ -72,8 +172,8 @@ string abc = Console.ReadLine();
 </div>
 
 <div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.2.</span> 2024-01-16 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.3.</span> 2024-01-16 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -85,8 +185,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.3.</span> 2024-01-16 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="orgdd2b753"><span class="section-number-3">1.4.</span> 2024-01-16 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-4">
 <table>
 
 
@@ -506,8 +606,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.4.</span> 2023-12-26 (任务)</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="orgad105e2"><span class="section-number-3">1.5.</span> 2023-12-26 (任务)</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 </p>
@@ -515,8 +615,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.5.</span> 2023-10-31 (任务)</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org64a4c8c"><span class="section-number-3">1.6.</span> 2023-10-31 (任务)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
 </p>
@@ -524,8 +624,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.6.</span> 2023-09-06 (任务)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org16fdc68"><span class="section-number-3">1.7.</span> 2023-09-06 (任务)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 </p>
@@ -1167,7 +1267,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-12</p>
+<p class="date">Created: 2024-03-13</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
