--- a/192/index.html
+++ b/192/index.html
@@ -151,6 +151,22 @@ GUI 程序 (Graphic User Interface):
 </pre>
 </div>
 </details>
+
+<p>
+接下来:
+</p>
+<ul class="org-ul">
+<li>练习实现 Winform 版的 BMI 计算器的步骤</li>
+<li>对上述 BMI 计算器进行优化，增加用户体验</li>
+<li><p>
+为上述 BMI 计算器，增加历史记录和历史显示功能
+</p>
+<pre class="example">
+[2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+[2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+[2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+</pre></li>
+</ul>
 </div>
 </div>
 
