best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -163,8 +163,8 @@ GUI 程序 (Graphic User Interface):
 </p>
 <pre class="example">
 [2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
-[2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
-[2011.1.23 15:20:35]  身高: 1.55   体重: 66   BMI: 33   状况: 健康
+[2012.3.13 12:20:35]  身高: 1.24   体重: 67   BMI: 32   状况: 肥胖
+[2015.2.5  11:20:35]  身高: 1.65   体重: 68   BMI: 23   状况: 健康
 </pre></li>
 </ul>
 </div>
