best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -156,7 +156,7 @@ GUI 程序 (Graphic User Interface):
 接下来:
 </p>
 <ul class="org-ul">
-<li>练习实现 Winform 版的 BMI 计算器的步骤</li>
+<li>练习 Winform 版的 BMI 计算器</li>
 <li>对上述 BMI 计算器进行优化，增加用户体验 (重点是错误处理)</li>
 <li><p>
 为上述 BMI 计算器，增加历史记录和历史显示功能
