best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -110,9 +110,9 @@ GUI 程序 (Graphic User Interface):
 从工具箱每一个拖进来的东西，都叫做一个 <b>控件</b>:
 </p>
 <ul class="org-ul">
-<li>实质上，一个控件就是一个 C# 类型的实例</li>
+<li>实质上，一个控件就是一个 C# 类型 (class Button/Label&#x2026;) 的实例</li>
 <li>通过界面设计器，进行拖拽，实质上是 VS 帮助我们自动生成了一坨坨的代码</li>
-<li>每一个控件都有一个[Name]的属性，这个是控件的唯一引用ID。
+<li>每一个控件都有一个 [Name] 的属性，这个是控件的唯一引用 ID。
 要养成一个好的习惯，就是将常用的控件，改一个合适的名字</li>
 <li>MessageBox.Show 对应的是控制台项目中的 Console.Write</li>
 </ul>
