--- a/191/index.html
+++ b/191/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-12 -->
+<!-- 2024-03-15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>191</title>
@@ -20,32 +20,33 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org76a5276">1. 笔记</a>
+<li><a href="#org6f420db">1. 笔记</a>
 <ul>
-<li><a href="#org098f2d8">1.1. 2024-03-12 09:46:16</a></li>
-<li><a href="#org6978b31">1.2. 2024-03-08 08:40:26</a></li>
-<li><a href="#org160cd62">1.3. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org96e0ceb">1.4. 2024-01-15 (期末分数)</a></li>
-<li><a href="#org3e62385">1.5. 2023-12-25 (任务)</a></li>
-<li><a href="#orge9d360e">1.6. 2023-10-30 (任务)</a></li>
-<li><a href="#org97d04e9">1.7. 2023-09-11 (任务)</a></li>
+<li><a href="#orgd102dc4">1.1. 2024-03-15 08:30:49</a></li>
+<li><a href="#orga76909f">1.2. 2024-03-12 09:46:16</a></li>
+<li><a href="#org55e7c0e">1.3. 2024-03-08 08:40:26</a></li>
+<li><a href="#org1e73e0a">1.4. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#orgb4d145b">1.5. 2024-01-15 (期末分数)</a></li>
+<li><a href="#org74d06bc">1.6. 2023-12-25 (任务)</a></li>
+<li><a href="#orga9f8e56">1.7. 2023-10-30 (任务)</a></li>
+<li><a href="#org857fc3a">1.8. 2023-09-11 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#org6b73c18">2. 练习题</a>
+<li><a href="#org9279aab">2. 练习题</a>
 <ul>
-<li><a href="#org001c09e">2.1. 循环和条件判断</a>
+<li><a href="#org00a7649">2.1. 循环和条件判断</a>
 <ul>
-<li><a href="#org432ea3a">2.1.1. 打印从 1 到 1000 的所有数</a></li>
-<li><a href="#orgc41944b">2.1.2. 求取从 1 到 1000 的所有数的和</a></li>
-<li><a href="#orgb27b2e3">2.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
-<li><a href="#org83a9938">2.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-<li><a href="#orgef0924b">2.1.5. 在控制台上，输出倒三角图案</a></li>
-<li><a href="#orgadbd614">2.1.6. 在控制台上，输出 99 乘法表</a></li>
+<li><a href="#orgc847d55">2.1.1. 打印从 1 到 1000 的所有数</a></li>
+<li><a href="#org26699e9">2.1.2. 求取从 1 到 1000 的所有数的和</a></li>
+<li><a href="#org55cf224">2.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
+<li><a href="#orgc8b5722">2.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
+<li><a href="#orgd4845c3">2.1.5. 在控制台上，输出倒三角图案</a></li>
+<li><a href="#org5217738">2.1.6. 在控制台上，输出 99 乘法表</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org025282c">3. 任务结果</a></li>
+<li><a href="#org8785210">3. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -54,13 +55,57 @@
 </p>
 
 
-<section id="outline-container-org76a5276" class="outline-2">
-<h2 id="org76a5276"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-org6f420db" class="outline-2">
+<h2 id="org6f420db"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org098f2d8" class="outline-3">
-<h3 id="org098f2d8"><span class="section-number-3">1.1.</span> 2024-03-12 09:46:16</h3>
+<div id="outline-container-orgd102dc4" class="outline-3">
+<h3 id="orgd102dc4"><span class="section-number-3">1.1.</span> 2024-03-15 08:30:49</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+翻转字符串，参考代码：
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">static</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Main</span><span style="color: #000000;">(</span><span style="color: #005a5f;">string</span><span style="color: #a8007f;">[]</span> <span style="color: #00538b;">args</span><span style="color: #000000;">)</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">1. &#29992;&#25143;&#36755;&#20837;&#23383;&#31526;&#20018;</span>
+<span class="linenr"> 4: </span>    Console.<span style="color: #721045;">Write</span><span style="color: #a8007f;">(</span><span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#24744;&#35201;&#25805;&#20316;&#30340;&#23383;&#31526;&#20018;: "</span><span style="color: #a8007f;">)</span>;
+<span class="linenr"> 5: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">input</span> = Console.<span style="color: #721045;">ReadLine</span><span style="color: #a8007f;">()</span>;
+<span class="linenr"> 6: </span>
+<span class="linenr"> 7: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">2. &#27714;&#21462;&#32763;&#36716;&#30340;&#23383;&#31526;&#20018;</span>
+<span class="linenr"> 8: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">output</span> = <span style="color: #721045;">ReverseString</span><span style="color: #a8007f;">(</span>input<span style="color: #a8007f;">)</span>;
+<span class="linenr"> 9: </span>
+<span class="linenr">10: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">3. &#36755;&#20986;&#23383;&#31526;&#20018;</span>
+<span class="linenr">11: </span>    Console.<span style="color: #721045;">WriteLine</span><span style="color: #a8007f;">(</span>$<span style="color: #2544bb;">"&#32763;&#36716;&#21518;&#30340;&#32467;&#26524;&#26159;: {output}"</span><span style="color: #a8007f;">)</span>;
+<span class="linenr">12: </span><span style="color: #000000;">}</span>
+<span class="linenr">13: </span>
+<span class="linenr">14: </span><span style="color: #5317ac;">static</span> <span style="color: #005a5f;">string</span> <span style="color: #721045;">ReverseString</span><span style="color: #000000;">(</span><span style="color: #005a5f;">string</span> <span style="color: #00538b;">input</span><span style="color: #000000;">)</span>
+<span class="linenr">15: </span><span style="color: #000000;">{</span>
+<span class="linenr">16: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#26368;&#22909;&#19981;&#29992;&#30452;&#25509;&#29992; string &#36827;&#34892;&#25340;&#25509; (string vs StringBuilder)</span>
+<span class="linenr">17: </span>    <span style="color: #005a5f;">string</span> <span style="color: #00538b;">result</span> = <span style="color: #2544bb;">""</span>;
+<span class="linenr">18: </span>    <span style="color: #5317ac;">foreach</span> <span style="color: #a8007f;">(</span><span style="color: #005a5f;">char</span> <span style="color: #00538b;">c</span> <span style="color: #5317ac;">in</span> input<span style="color: #a8007f;">)</span>
+<span class="linenr">19: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr">20: </span>        result = c + result;
+<span class="linenr">21: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">22: </span>
+<span class="linenr">23: </span>    <span style="color: #5317ac;">return</span> result;
+<span class="linenr">24: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+
+<p>
+改进:
+</p>
+<ol class="org-ol">
+<li>优化代码，让其更加高效合理 (stringbuilder)</li>
+<li>在主程序中，增加逻辑，让代码一直执行。除非输入了【退出】，程序结束</li>
+</ol>
+</div>
+</div>
+
+<div id="outline-container-orga76909f" class="outline-3">
+<h3 id="orga76909f"><span class="section-number-3">1.2.</span> 2024-03-12 09:46:16</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 99乘法表，实际上跟倒三角的题目是一样的:
 </p>
@@ -71,9 +116,9 @@
 </div>
 </div>
 
-<div id="outline-container-org6978b31" class="outline-3">
-<h3 id="org6978b31"><span class="section-number-3">1.2.</span> 2024-03-08 08:40:26</h3>
-<div class="outline-text-3" id="text-1-2">
+<div id="outline-container-org55e7c0e" class="outline-3">
+<h3 id="org55e7c0e"><span class="section-number-3">1.3.</span> 2024-03-08 08:40:26</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 要干啥:
 </p>
@@ -92,15 +137,15 @@
 </div>
 </div>
 
-<div id="outline-container-org160cd62" class="outline-3">
-<h3 id="org160cd62"><span class="section-number-3">1.3.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-3">
+<div id="outline-container-org1e73e0a" class="outline-3">
+<h3 id="org1e73e0a"><span class="section-number-3">1.4.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 完成下面图示的题目:
 </p>
 
 
-<figure id="orgd0841d1">
+<figure id="org68d92ca">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -115,9 +160,9 @@
 </div>
 </div>
 
-<div id="outline-container-org96e0ceb" class="outline-3">
-<h3 id="org96e0ceb"><span class="section-number-3">1.4.</span> 2024-01-15 (期末分数)</h3>
-<div class="outline-text-3" id="text-1-4">
+<div id="outline-container-orgb4d145b" class="outline-3">
+<h3 id="orgb4d145b"><span class="section-number-3">1.5.</span> 2024-01-15 (期末分数)</h3>
+<div class="outline-text-3" id="text-1-5">
 <table>
 
 
@@ -368,27 +413,27 @@
 
 
 
-<div id="outline-container-org3e62385" class="outline-3">
-<h3 id="org3e62385"><span class="section-number-3">1.5.</span> 2023-12-25 (任务)</h3>
-<div class="outline-text-3" id="text-1-5">
+<div id="outline-container-org74d06bc" class="outline-3">
+<h3 id="org74d06bc"><span class="section-number-3">1.6.</span> 2023-12-25 (任务)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方
 </p>
 </div>
 </div>
 
-<div id="outline-container-orge9d360e" class="outline-3">
-<h3 id="orge9d360e"><span class="section-number-3">1.6.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-6">
+<div id="outline-container-orga9f8e56" class="outline-3">
+<h3 id="orga9f8e56"><span class="section-number-3">1.7.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
 </div>
 </div>
 
-<div id="outline-container-org97d04e9" class="outline-3">
-<h3 id="org97d04e9"><span class="section-number-3">1.7.</span> 2023-09-11 (任务)</h3>
-<div class="outline-text-3" id="text-1-7">
+<div id="outline-container-org857fc3a" class="outline-3">
+<h3 id="org857fc3a"><span class="section-number-3">1.8.</span> 2023-09-11 (任务)</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 创建 helloworld、编译、运行，独立完成
 </p>
@@ -396,16 +441,16 @@
 </div>
 </section>
 
-<section id="outline-container-org6b73c18" class="outline-2">
-<h2 id="org6b73c18"><span class="section-number-2">2.</span> 练习题</h2>
+<section id="outline-container-org9279aab" class="outline-2">
+<h2 id="org9279aab"><span class="section-number-2">2.</span> 练习题</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org001c09e" class="outline-3">
-<h3 id="org001c09e"><span class="section-number-3">2.1.</span> 循环和条件判断</h3>
+<div id="outline-container-org00a7649" class="outline-3">
+<h3 id="org00a7649"><span class="section-number-3">2.1.</span> 循环和条件判断</h3>
 <div class="outline-text-3" id="text-2-1">
 </div>
-<div id="outline-container-org432ea3a" class="outline-4">
-<h4 id="org432ea3a"><span class="section-number-4">2.1.1.</span> 打印从 1 到 1000 的所有数</h4>
+<div id="outline-container-orgc847d55" class="outline-4">
+<h4 id="orgc847d55"><span class="section-number-4">2.1.1.</span> 打印从 1 到 1000 的所有数</h4>
 <div class="outline-text-4" id="text-2-1-1">
 <details><summary>参考答案</summary>
 
@@ -421,8 +466,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc41944b" class="outline-4">
-<h4 id="orgc41944b"><span class="section-number-4">2.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
+<div id="outline-container-org26699e9" class="outline-4">
+<h4 id="org26699e9"><span class="section-number-4">2.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
 <div class="outline-text-4" id="text-2-1-2">
 <details><summary>参考答案</summary>
 
@@ -440,8 +485,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb27b2e3" class="outline-4">
-<h4 id="orgb27b2e3"><span class="section-number-4">2.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
+<div id="outline-container-org55cf224" class="outline-4">
+<h4 id="org55cf224"><span class="section-number-4">2.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
 <div class="outline-text-4" id="text-2-1-3">
 <details><summary>参考答案</summary>
 
@@ -464,8 +509,8 @@
 </div>
 </div>
 
-<div id="outline-container-org83a9938" class="outline-4">
-<h4 id="org83a9938"><span class="section-number-4">2.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
+<div id="outline-container-orgc8b5722" class="outline-4">
+<h4 id="orgc8b5722"><span class="section-number-4">2.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
 <div class="outline-text-4" id="text-2-1-4">
 <details><summary>参考答案</summary>
 
@@ -490,8 +535,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgef0924b" class="outline-4">
-<h4 id="orgef0924b"><span class="section-number-4">2.1.5.</span> 在控制台上，输出倒三角图案</h4>
+<div id="outline-container-orgd4845c3" class="outline-4">
+<h4 id="orgd4845c3"><span class="section-number-4">2.1.5.</span> 在控制台上，输出倒三角图案</h4>
 <div class="outline-text-4" id="text-2-1-5">
 <pre class="example">
 *****
@@ -527,8 +572,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgadbd614" class="outline-4">
-<h4 id="orgadbd614"><span class="section-number-4">2.1.6.</span> 在控制台上，输出 99 乘法表</h4>
+<div id="outline-container-org5217738" class="outline-4">
+<h4 id="org5217738"><span class="section-number-4">2.1.6.</span> 在控制台上，输出 99 乘法表</h4>
 <div class="outline-text-4" id="text-2-1-6">
 <pre class="example">
 1x1=1
@@ -565,10 +610,10 @@
 </div>
 </section>
 
-<section id="outline-container-org025282c" class="outline-2">
-<h2 id="org025282c"><span class="section-number-2">3.</span> 任务结果</h2>
+<section id="outline-container-org8785210" class="outline-2">
+<h2 id="org8785210"><span class="section-number-2">3.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-3">
-<table id="org21eae3b">
+<table id="org0c85b7f">
 
 
 <colgroup>
@@ -586,9 +631,9 @@
 <tr>
 <th scope="col" class="org-right">组</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right"><a href="#org97d04e9">2023-09-11</a></th>
-<th scope="col" class="org-right"><a href="#orge9d360e">2023-10-30</a></th>
-<th scope="col" class="org-right"><a href="#org3e62385">2023-12-25</a></th>
+<th scope="col" class="org-right"><a href="#org857fc3a">2023-09-11</a></th>
+<th scope="col" class="org-right"><a href="#orga9f8e56">2023-10-30</a></th>
+<th scope="col" class="org-right"><a href="#org74d06bc">2023-12-25</a></th>
 </tr>
 </thead>
 <tbody>
@@ -790,7 +835,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-12</p>
+<p class="date">Created: 2024-03-15</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
