best_try_and_best_chance

--- a/191/index.html
+++ b/191/index.html
@@ -188,7 +188,7 @@ Winform练习题:
 </p>
 
 
-<figure id="orgb61f719">
+<figure id="orgc84db2b">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -660,6 +660,9 @@ Winform练习题:
 <div id="outline-container-org47e98b2" class="outline-3">
 <h3 id="org47e98b2"><span class="section-number-3">3.1.</span> 字符串的拼接</h3>
 <div class="outline-text-3" id="text-3-1">
+<p>
+简而言之，字符串有如下 4 种常用的拼接方式。代码示例如下:
+</p>
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">string</span> <span style="color: #00538b;">a</span> = <span style="color: #2544bb;">"hello"</span>;
 <span class="linenr"> 2: </span><span style="color: #005a5f;">string</span> <span style="color: #00538b;">b</span> = <span style="color: #2544bb;">"world"</span>;
